<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuTopluluklarActionToplulukAra"
        android:icon="@drawable/ic_search"
        android:title="@string/menuActionAra"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/menuTopluluklarActionBildirimler"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menuActionBildirimler"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menuTopluluklarActionSifreDegistir"
        android:icon="@drawable/ic_settings"
        android:title="@string/menuActionSifreDegistir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuTopluluklarActionCikis"
        android:icon="@drawable/ic_exit"
        android:title="@string/menuActionCikisYap"
        app:showAsAction="ifRoom" />
</menu>